# install-paths

./: .travis.yml  README.md  data-files.cabal  install-paths.cabal
src/System/Environment/: DataFiles.hs  InstallPaths.hs  RelativeDataFiles.hs
src/System/Environment/InstallPaths/: Parameters.hs
src/System/Environment/RelativeDataFiles/: Parameters.hs
