name:                   install-paths
version:                0.1.0.0
synopsis:               Functions for determining directory layout from
                        executable path.
-- description:
homepage:               https://github.com/trskop/install-paths
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015, Peter Trško
category:               Development
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      System.Environment.InstallPaths
    , System.Environment.InstallPaths.Parameters

  -- other-modules:

  default-language:     Haskell2010
  other-extensions:     NoImplicitPrelude

  build-depends:
      base >=4.7 && <4.8
    , filepath

    , data-default-class ==0.0.*
    , executable-path ==0.0.*

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
--    -Werror

source-repository head
  type:                 git
  location:             git://github.com/trskop/install-paths.git
